--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
